corrects filenames under controllers folder and comment MYSQL_PASSWORD at docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     environment:
       MYSQL_DATABASE: 'database'
       MYSQL_USER: 'root'
-      MYSQL_PASSWORD: '12345678'
+      #MYSQL_PASSWORD: '12345678'
       MYSQL_ROOT_PASSWORD: '12345'
 volumes:
   mysql:
